--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   url_launcher: ^6.1.14
   provider: ^6.0.5
+  location: ^5.0.3
 
 flutter_launcher_icons:
   android: "launcher_icon"
